// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`@mykeels/mee-karaoke components/SongExporter Index 1`] = `
<div
  className="block h-screen w-screen song-exporter relative"
>
  <div
    className="flex w-full h-full items-center justify-center py-4 px-8 bg-purple-100 opacity-75"
  />
  <div
    className="flex w-full h-full items-center justify-center py-4 px-16 absolute top-0 left-0"
  />
</div>
`;

exports[`@mykeels/mee-karaoke components/SongExporter No Ff Mpeg 1`] = `
<div
  className="block h-screen w-screen song-exporter relative"
>
  <div
    className="flex w-full h-full items-center justify-center py-4 px-8 bg-purple-100 opacity-75"
  />
  <div
    className="block w-full h-full items-center justify-center py-4 px-16 absolute top-0 left-0 text-white"
  >
    <div
      className="text-3xl py-8"
    >
      Export "
      Something just like this
      "
    </div>
    <div
      className="flex w-full py-4"
    >
      <div
        className="inline-block 1/4 px-2"
      >
        <div
          className="block w-full px-4 py-2 text-lg bg-purple-200 my-4"
        >
          1. Checking NodeJS is installed
           
          ✅
        </div>
        <div
          className="block w-full px-4 py-2 text-lg bg-purple-200 my-4"
        >
          2. Checking FFMpeg is installed
           
          ❌
        </div>
        <div
          className="block w-full px-4 py-2 text-lg bg-purple-200 my-4"
        >
          3. Rendering Video
        </div>
      </div>
      <div
        className="inline-block 3/4 px-2"
      >
        <div
          className="block w-full px-8 py-4 text-lg bg-purple-200 my-4"
        >
          <h2
            className="underline py-4"
          >
            FfMpeg is not installed
          </h2>
          <p
            className="py-4"
          >
            To export a video you need FfMpeg installed on your computer.
          </p>
          <p
            className="py-4"
          >
            You can
             
            <a
              className="underline text-lavender-100"
              href="https://ffmpeg.org/download.html"
              rel="noreferrer"
              target="_blank"
            >
              download and install an executable
            </a>
             
            for Ffmpeg.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`@mykeels/mee-karaoke components/SongExporter No Node Js 1`] = `
<div
  className="block h-screen w-screen song-exporter relative"
>
  <div
    className="flex w-full h-full items-center justify-center py-4 px-8 bg-purple-100 opacity-75"
  />
  <div
    className="block w-full h-full items-center justify-center py-4 px-16 absolute top-0 left-0 text-white"
  >
    <div
      className="text-3xl py-8"
    >
      Export "
      Something just like this
      "
    </div>
    <div
      className="flex w-full py-4"
    >
      <div
        className="inline-block 1/4 px-2"
      >
        <div
          className="block w-full px-4 py-2 text-lg bg-purple-200 my-4"
        >
          1. Checking NodeJS is installed
           
          ❌
        </div>
        <div
          className="block w-full px-4 py-2 text-lg bg-purple-200 my-4"
        >
          2. Checking FFMpeg is installed
           
          ❌
        </div>
        <div
          className="block w-full px-4 py-2 text-lg bg-purple-200 my-4"
        >
          3. Rendering Video
        </div>
      </div>
      <div
        className="inline-block 3/4 px-2"
      >
        <div
          className="block w-full px-8 py-4 text-lg bg-purple-200 my-4"
        >
          <h2
            className="underline py-4"
          >
            NodeJS is not installed
          </h2>
          <p
            className="py-4"
          >
            To export a video you need NodeJS installed on your computer.
          </p>
          <p
            className="py-4"
          >
            You can
             
            <a
              className="underline text-lavender-100"
              href="https://nodejs.org/en/"
              rel="noreferrer"
              target="_blank"
            >
              download and install the LTS version
            </a>
            .
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
